cmake_minimum_required(VERSION 3.17)
project(datastruct)

set(CMAKE_CXX_STANDARD 14)

add_executable(datastruct main.cpp)


add_executable(BFS___Single_source_shortest_path_of_weighted_graph 5Graph/BFS___Single_source_shortest_path_of_weighted_graph.cpp)
add_executable(Graph___AdjacencyTableMethod 5Graph/Graph___AdjacencyTable.cpp)
add_executable(PAT_1003_Emergency PAT/1003_Emergency.cpp)
add_executable(first STL_learning/demo.cpp)
add_executable(PAT_1003_Emergency2 PAT/1003_Emergency2.cpp)
add_executable(dijkstra__example1 5Graph/dijkstra__example1.cpp)
add_executable(1004_Counting_Leaves PAT/1004_Counting_Leaves.cpp)
add_executable(1004_Counting_Leaves2 PAT/1004_Counting_Leaves2.cpp)
add_executable(1002_for_Polynomials PAT/1002_for_Polynomials.cpp)
add_executable(1005_Spell_It_Right PAT/1005_Spell_It_Right.cpp)
add_executable(1006_Sign_In_and_Sign_Out PAT/1006_Sign_In_and_Sign_Out.cpp)
add_executable(1006_Sign_In_and_Sign_Out2 PAT/1006_Sign_In_and_Sign_Out2.cpp)
add_executable(1007_Maximum_Subsequence_Sum PAT/1007_Maximum_Subsequence_Sum.cpp)
add_executable(1008_Elevator PAT/1008_Elevator.cpp)
add_executable(1009_Product_of_Polynomials PAT/1009_Product_of_Polynomials.cpp)
add_executable(1010_Radix PAT/1010_Radix.cpp)
add_executable(001_House_number_making  "Blue_Bridge_Cup/001_House_number_making .cpp")
add_executable(002_reduced_fraction  "Blue_Bridge_Cup/002_reduced_fraction .cpp")
add_executable(1011_World_Cup_Betting PAT/1011_World_Cup_Betting.cpp)
add_executable(1012_The_Best_Rank PAT/1012_The_Best_Rank.cpp)
add_executable(1013_Battle_Over_Cities PAT/1013_Battle_Over_Cities.cpp)
add_executable(Dynamic_allocation 1LinearList/Dynamic_allocation.cpp)
add_executable(LinkList 1LinearList/LinkList.cpp)
add_executable(DoubleLinkList 1LinearList/DoubleLinkList.cpp)
add_executable(SeqStack 2StackAndQueue/SeqStack.cpp)
add_executable(LinkStack 2StackAndQueue/LinkStack.cpp)
add_executable(SqQueue 2StackAndQueue/SqQueue.cpp)
add_executable(LinkQueue 2StackAndQueue/LinkQueue.cpp)
add_executable(Tree 4Tree/Tree.cpp)
add_executable(FullTree 4Tree/FullTree.cpp)
add_executable(demo1 test_all/demo1.cpp)
add_executable(1012 PAT/yi/1012.cpp)
add_executable(p37 1LinearList/p37.cpp)
add_executable(p66 2StackAndQueue/p66.cpp)
add_executable(CircleQueue 2StackAndQueue/CircleQueue.cpp)
add_executable(p80 2StackAndQueue/p80.cpp)
add_executable(matchBracket 2StackAndQueue/calculateExpression.cpp)
add_executable(InsertSort 7Sort/alogrithms.cpp)
add_executable(7_1 test_all/summer_pat/7_1.cpp)
add_executable(7_2 test_all/summer_pat/7_2.cpp)
add_executable(demo 3String/demo.cpp)

add_executable(algorithms 6Search/algorithms.cpp)