cmake_minimum_required(VERSION 3.17)
project(datastruct)

set(CMAKE_CXX_STANDARD 14)

add_executable(datastruct main.cpp)


add_executable(BFS___Single_source_shortest_path_of_weighted_graph db/5Graph/BFS___Single_source_shortest_path_of_weighted_graph.cpp)
add_executable(Graph___AdjacencyTableMethod db/5Graph/Graph___AdjacencyTable.cpp)
add_executable(PAT_1003_Emergency PAT/1003_Emergency.cpp)
add_executable(first STL_learning/demo.cpp)
add_executable(PAT_1003_Emergency2 PAT/1003_Emergency2.cpp)
add_executable(dijkstra__example1 db/5Graph/dijkstra__example1.cpp)
add_executable(1004_Counting_Leaves PAT/1004_Counting_Leaves.cpp)
add_executable(1004_Counting_Leaves2 PAT/1004_Counting_Leaves2.cpp)
add_executable(1002_for_Polynomials PAT/1002_for_Polynomials.cpp)
add_executable(1005_Spell_It_Right PAT/1005_Spell_It_Right.cpp)
add_executable(1006_Sign_In_and_Sign_Out PAT/1006_Sign_In_and_Sign_Out.cpp)
add_executable(1006_Sign_In_and_Sign_Out2 PAT/1006_Sign_In_and_Sign_Out2.cpp)
add_executable(1007_Maximum_Subsequence_Sum PAT/1007_Maximum_Subsequence_Sum.cpp)
add_executable(1008_Elevator PAT/1008_Elevator.cpp)
add_executable(1009_Product_of_Polynomials PAT/1009_Product_of_Polynomials.cpp)
add_executable(1010_Radix PAT/1010_Radix.cpp)
add_executable(001_House_number_making  "Blue_Bridge_Cup/001_House_number_making .cpp")
add_executable(002_reduced_fraction  "Blue_Bridge_Cup/002_reduced_fraction .cpp")
add_executable(1011_World_Cup_Betting PAT/1011_World_Cup_Betting.cpp)
add_executable(1012_The_Best_Rank PAT/1012_The_Best_Rank.cpp)
add_executable(1013_Battle_Over_Cities PAT/1013_Battle_Over_Cities.cpp)
add_executable(Dynamic_allocation db/1LinearList/Dynamic_allocation.cpp)
add_executable(LinkList db/1LinearList/LinkList.cpp)
add_executable(DoubleLinkList db/1LinearList/DoubleLinkList.cpp)
add_executable(SeqStack db/2StackAndQueue/SeqStack.cpp)
add_executable(LinkStack db/2StackAndQueue/LinkStack.cpp)
add_executable(SqQueue db/2StackAndQueue/SqQueue.cpp)
add_executable(LinkQueue db/2StackAndQueue/LinkQueue.cpp)
add_executable(Tree db/4Tree/Tree.cpp)
add_executable(FullTree db/4Tree/FullTree.cpp)
add_executable(demo1 demo1.cpp)
add_executable(1012 PAT/yi/1012.cpp)
add_executable(p37 db/1LinearList/p37.cpp)
add_executable(p66 db/2StackAndQueue/p66.cpp)
add_executable(CircleQueue db/2StackAndQueue/CircleQueue.cpp)
add_executable(p80 db/2StackAndQueue/p80.cpp)
add_executable(matchBracket db/2StackAndQueue/calculateExpression.cpp)
add_executable(InsertSort db/7Sort/alogrithms.cpp)
add_executable(7_1 test_all/summer_pat/7_1.cpp)
add_executable(7_2 test_all/summer_pat/7_2.cpp)
add_executable(demo db/3String/demo.cpp)
add_executable(alogrithms db/6Search/alogrithms.cpp)
add_executable(7_5 test_all/summer_pat/7_5.cpp)
add_executable(7_6 test_all/summer_pat/7_6.cpp)
add_executable(7_7 test_all/summer_pat/7_7.cpp)
add_executable(7_8 test_all/summer_pat/7_8.cpp)
add_executable(7_9 test_all/summer_pat/7_9.cpp)
add_executable(1077 PAT/yi/1077.cpp)
add_executable(1 test_all/summer_pat3/1.cpp)
add_executable(2 test_all/summer_pat3/2.cpp)
add_executable(3 test_all/summer_pat3/3.cpp)
add_executable(p221 db/5Graph/p221.cpp)
add_executable(Dijkstra db/5Graph/Dijkstra.cpp)
add_executable(6 test_all/summer_pat3/6.cpp)
add_executable(Floyd db/5Graph/Floyd.cpp)
add_executable(114 anxiaoyan/116_1.cpp)
add_executable(116_2 anxiaoyan/116_2.cpp)
add_executable(de test_all/summer_pat/de.cpp)
add_executable(130_2 anxiaoyan/130_2.cpp)
add_executable(144_1 anxiaoyan/144_1.cpp)
add_executable(mutiple_pro_cos os/mutiple_pro_cos.cpp)